--- a/src/app/usit/components/vendor-management/recruiter-list/add-recruiter/add-recruiter.component.html
+++ b/src/app/usit/components/vendor-management/recruiter-list/add-recruiter/add-recruiter.component.html
@@ -14,18 +14,27 @@
         <div formGroupName = "vendor" class="search-company-field">   
         <mat-form-field appearance="fill">
           <mat-label>Company Name</mat-label>
-                 
             <input matInput formControlName="company" [matAutocomplete]="companyAutoCmp" />
           <mat-autocomplete #companyAutoCmp="matAutocomplete">
             <mat-option *ngFor="let option of (searchCompanyOptions$ | async)" [value]="option.company.trim()" (onSelectionChange)="onVendorSelect(option)">{{ option.company.trim() }}</mat-option>
           </mat-autocomplete>
-        
-
           <button matSuffix mat-icon-button (click)="navigateToAddVendor()"><mat-icon>add</mat-icon></button>
           <mat-hint *ngIf="isCompanyDataAvailable">No results found, click '+' to add vendor</mat-hint>
           <mat-error *ngIf="recruiterForm.get('vendor.company')!.hasError('required')">Company Name is Required</mat-error>
         </mat-form-field>
       </div>
+      
+      <!-- Country -->
+      <mat-form-field>
+        <mat-label>Select Country</mat-label>
+        <mat-select formControlName="country">
+          <mat-option value="USA">USA</mat-option>
+          <mat-option value="UAE">UAE</mat-option>
+        </mat-select>
+        <mat-error *ngIf="recruiterForm.get('country')!.hasError('required')"> Country is
+          required</mat-error>
+      </mat-form-field>
+
         <!-- staff   -->
         <mat-form-field appearance="fill">
           <mat-label>Recruiter Name</mat-label>
