--- a/src/app/usit/components/email-extraction/email-extraction.component.html
+++ b/src/app/usit/components/email-extraction/email-extraction.component.html
@@ -14,7 +14,6 @@
 
             <div class="search-hot-list">
                 <input matInput type="text" class="search" placeholder="search" (keyup)="applyFilter($event)">
-                <!-- (keyup)="applyFilter($event)" -->
             </div>
         </div>
     </div>
@@ -32,55 +31,65 @@
                         S.No </th>
                     <td mat-cell *matCellDef="let element" style=" width: 1% "> {{element?.serialNum}} </td>
                 </ng-container>
-                <!-- Name Column-->
-
+                <!-- Subject Column-->
                 <ng-container matColumnDef="Subject">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Subject" style=" width: 30% !important;" >
                         Subject</th>
-                    <td mat-cell *matCellDef="let element" style=" width: 30% !important;" >{{element?.subject|titlecase}} </td>
+                    <td mat-cell *matCellDef="let element" style=" width: 30% !important;" >{{element?.subject | titlecase}} </td>
                 </ng-container>
-                <!-- Sender Column-->
-                <ng-container matColumnDef="Sender">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Sender"   style=" width: 5% ">
-                        Sender </th>
-                    <td mat-cell *matCellDef="let element"  style=" width: 5% "><span class="consultant-name">{{element?.sender}}
+                <!-- From Column-->
+                <ng-container matColumnDef="From">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by From"   style=" width: 15% ">
+                        From </th>
+                    <td mat-cell *matCellDef="let element"  style=" width: 15% "><span class="consultant-name">{{element?.sender}}
                         </span> </td>
                 </ng-container>
-                <!-- Date Column-->
-                <ng-container matColumnDef="Date">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date" style=" width: 10% !important;"
-                        nowrap>
-                        Date </th>
+                 <!-- To Column-->
+                 <ng-container matColumnDef="To">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by To"   style=" width: 15% ">
+                        To </th>
+                    <td mat-cell *matCellDef="let element"  style=" width: 15% ">
+                        <span class="consultant-name" class="truncate-multiline" [matTooltip]="element?.tomails">
+                            {{element?.tomails}}
+                        </span>
+                    </td>
+                </ng-container>
+                <!-- CC Column-->
+                <ng-container matColumnDef="CC">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by CC"   style=" width: 15% ">
+                        Cc </th>
+                    <td mat-cell *matCellDef="let element"  style=" width: 15% ">
+                        <span [ngClass]="element?.ccmails ? 'consultant-name' : 'bold-class'" class="truncate-multiline" [matTooltip]="element?.ccmails || '-'">
+                            {{ element?.ccmails || '-' }}
+                        </span>
+                    </td>
+                </ng-container>
+                <!-- Received Date Column-->
+                <ng-container matColumnDef="ReceivedDate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by ReceivedDate"
+                        style=" width: 10% !important;" nowrap>
+                        Received Date </th>
                     <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
                         {{element?.sentdate}}</td>
                 </ng-container>
                 <!-- Body Column-->
                 <ng-container matColumnDef="Body">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Body" style=" width: 3% "> Body </th>
-                    <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)"  style=" width: 3% ">VIEW </td>
-                </ng-container>
-              <!-- <ng-container matColumnDef="Action">
-                    <th mat-header-cell *matHeaderCellDef  style=" width: 3% "> Action </th>
-                    <td mat-cell *matCellDef="let emp" class="action-buttons"  style=" width: 3% ">
-                      <span class="action-btns">
-                      <button  mat-icon-button (click)="deleteItem(emp)"class="action-button-ed">
-                          <mat-icon >delete</mat-icon>
-                        </button>
-                      </span>
+                    <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style=" width: 3% ">VIEW
                     </td>
-                  </ng-container>-->
-                  <ng-container matColumnDef="Action">
+                </ng-container>
+                <!-- Action Column-->
+                <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef style="width: 5%"> Action </th>
                     <td mat-cell *matCellDef="let element" style="width: 5%">
-                      <span class="action-buttons">
-                        <button [disabled]="!privilegeServ.hasPrivilege('DELETE_VENDOR')" mat-icon-button
-                          (click)="delete(element)" class="action-button-ed">
-                          <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_VENDOR')}">delete</mat-icon>
-                        </button>
-                      </span>
+                        <span class="action-buttons">
+                            <button [disabled]="!privilegeServ.hasPrivilege('DELETE_VENDOR')" mat-icon-button (click)="delete(element)"
+                                class="action-button-ed">
+                                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_VENDOR')}">delete</mat-icon>
+                            </button>
+                        </span>
                     </td>
-                  </ng-container>
-                  
+                </ng-container>
                 
                 <!-- table ROW  experience_summary -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
