--- a/src/app/usit/components/vendor-management/recruiter-list/add-recruiter/add-recruiter.component.html
+++ b/src/app/usit/components/vendor-management/recruiter-list/add-recruiter/add-recruiter.component.html
@@ -52,7 +52,7 @@
         <!-- Company Contact Number -->
         <mat-form-field appearance="fill">
           <mat-label>Contact Number </mat-label>
-          <ngx-mat-intl-tel-input  [preferredCountries]="['in','us']" matInput class="intl-input" formControlName="contactnumber" [enablePlaceholder]="true"
+          <ngx-mat-intl-tel-input  [preferredCountries]="['us','ae','in']" matInput class="intl-input" formControlName="contactnumber" [enablePlaceholder]="true"
             [enableSearch]="true" name="contactnumber" id="intlInput" #personalcontactnumber #pNumb>
           </ngx-mat-intl-tel-input>
           <!-- <mat-error
@@ -69,7 +69,7 @@
         <!-- Company Contact Number -->
         <mat-form-field appearance="fill">
           <mat-label>Alternate Contact Number</mat-label>
-          <ngx-mat-intl-tel-input  [preferredCountries]="['in','us']" matInput class="intl-input" formControlName="alternatecontactnumber" [enablePlaceholder]="true"
+          <ngx-mat-intl-tel-input  [preferredCountries]="['us','ae','in']" matInput class="intl-input" formControlName="alternatecontactnumber" [enablePlaceholder]="true"
             [enableSearch]="true" name="contactnumber" id="intlInput">
           </ngx-mat-intl-tel-input>
           <!-- <mat-error
